2002-11-22  Jonathan Graehl  <graehl@isi.edu>

	* src/graph.cc: changed mind.  split into two functions - one that
	builds all-source->one dest tree, other does single-source
	dijikstra and sets taken link pointers

	* src/kbest.cc: changed mind.  moved kbest reverse code into
	graph.cc function

	* src/finite.cc: added command line description of -w, -z

	* src/fst.h: added clear() and printArc()
	
	* src/config.h: added Config::debug() warn() and log() stream
	fetchers.  new DEBUG options

	* src/fst.cc: added prunePaths code.  tested.  changed reduce,
	removing yaser's set-tie-group-to-zero for deleted arcs.  should
	have no effect.

	* src/kbest.cc: because of change in graph.cc, reverse graph
	before bestPathsTree.

	* src/graph.cc: changed bestPathsTree to do single-source all-dest
	instead of single-dest.  

	* src/finite.cc: added -w,-z max-state/path-cost-ratio pruning
	options, restructured prune/minimize code (do not prune before
	training/assigning weights)

2002-11-21  Jonathan Graehl  <graehl@isi.edu>

	* src/weight.h: added pow, root, {set|Is}Infinity

	* src/fst.h: added WFST::log, warn, debug output streams

	* src/finite.cc: added -X option to set perplexity convergence ratio.  bumped version.

	* src/graph.cc: reworked topological sort to detect cycles.  put state and code in TopoSort class.

	* src/train.cc: changed perplexity measurement to per-symbol.  added ppx ratio convergence option


2002-11-07  Jonathan Graehl  <graehl@isi.edu>

	* src/train.cc: added perplexity measurement to training (-t)

	* Makefile: changes ARCH to linux/solaris/cygwin/freebsd, set CC.$ARCH to point to gcc version 3

	* src/weight.h: default output base is now e (and output is -30ln instead of -10log)

	* src/wfstio.cc: lines beginning with # (that aren't part of a quoted symbol) are ignored as comments

	* src/finite.cc: state names are no longer removed and replaced with numbers by default except in composition;